# pilorama

./: .gitignore  .travis.yml  CNAME  Matchfile  README.md  package-lock.json  package.json  signing-cheatsheet.txt  tailwind.config.js  wndws.iss
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build.yml  pre-build.yml  pre-release.yml  release.yml
docs/: CNAME  index.html  index.md  privacy-policy.html  privacy.html  style.css
fastlane/: Fastfile  Matchfile  README.md
macos/: .qmake.stash  Info.plist
macos/Pilorama.build/Debug/Pilorama.build/: Pilorama.hmap  dgph  dgph~
macos/Pilorama.build/Debug/Pilorama.build/Objects-normal/x86_64/: Pilorama.LinkFileList
macos/Pilorama.build/Debug/Qt Preprocess.build/: Script-5E618435888B9D49F8540165.sh  Script-7EF0942E79C014DCEC8976BC.sh  dgph
macos/Pilorama.xcodeproj/: project.pbxproj  qt_makeqmake.mak  qt_preprocess.mak
macos/Pilorama.xcodeproj/project.xcworkspace/xcuserdata/Sergey.xcuserdatad/: UserInterfaceState.xcuserstate
macos/Pilorama.xcodeproj/project.xcworkspace/xcuserdata/evgenijplatonov.xcuserdatad/: UserInterfaceState.xcuserstate
macos/Pilorama.xcodeproj/xcshareddata/xcschemes/: Pilorama.xcscheme
macos/Pilorama/Images.xcassets/AppIcon.appiconset/: Contents.json
macos/QtCore.framework/Versions/5/Headers/: qconfig.h  qtcoreversion.h
macos/QtCore.framework/Versions/5/Headers/5.15.1/QtCore/private/: qconfig_p.h  qtcore-config_p.h
macos/QtCore.framework/Versions/5/Resources/: Info.plist  QtCore.prl
macos/QtGui.framework/Versions/5/Headers/: qtgui-config.h  qtguiversion.h
macos/QtGui.framework/Versions/5/Headers/5.15.1/QtGui/private/: qtgui-config_p.h
macos/QtGui.framework/Versions/5/Resources/: Info.plist  QtGui.prl
macos/QtNetwork.framework/Versions/5/: QtNetwork
macos/QtNetwork.framework/Versions/5/Headers/: qtnetwork-config.h  qtnetworkversion.h
macos/QtNetwork.framework/Versions/5/Headers/5.15.1/QtNetwork/private/: qtnetwork-config_p.h
macos/QtNetwork.framework/Versions/5/Resources/: Info.plist  QtNetwork.prl
macos/QtQml.framework/Versions/5/Headers/: qtqmlversion.h
macos/QtQml.framework/Versions/5/Headers/5.15.1/QtQml/private/: qqmljsgrammar_p.h
macos/QtQml.framework/Versions/5/Resources/: Info.plist  QtQml.prl
macos/QtQmlModels.framework/Versions/5/: QtQmlModels
macos/QtQmlModels.framework/Versions/5/Headers/: qtqmlmodelsversion.h
macos/QtQmlModels.framework/Versions/5/Resources/: Info.plist  QtQmlModels.prl
macos/QtQuick.framework/Versions/5/Headers/: qtquickversion.h
macos/QtQuick.framework/Versions/5/Resources/: Info.plist  QtQuick.prl
macos/QtSvg.framework/Versions/5/: QtSvg
macos/QtSvg.framework/Versions/5/Headers/: qtsvgversion.h
macos/QtSvg.framework/Versions/5/Resources/: Info.plist  QtSvg.prl
macos/QtWidgets.framework/Versions/5/Headers/: qtwidgetsversion.h
macos/QtWidgets.framework/Versions/5/Resources/: Info.plist  QtWidgets.prl
macos/QtXml.framework/Versions/5/: QtXml
macos/QtXml.framework/Versions/5/Headers/: qtxmlversion.h
macos/QtXml.framework/Versions/5/Resources/: Info.plist  QtXml.prl
presets/: Colors.json  Pomodoro.json  TechnoYoga.json  Tomato.json
src/: CMakeLists.txt  Colors.qml  FileDialogue.qml  FileDialogueStub.qml  IconGenerator.qml  MasterModel.qml  ModelBurner.qml  MouseTracker.qml  NotificationSystem.qml  Pilorama.desktop  Pilorama.pro  PiloramaTimer.qml  PomodoroModel.qml  QTimer.qml  SequenceModel.qml  TrayIcon.qml  TrayIconStub.qml  _pilorama.pro  appnap.mm  main.cpp  main.qml  notificationdotprovider.cpp  notificationdotprovider.h  pilorama.desktop  pilorama.pro  piloramatimer.cpp  piloramatimer.h  qml-timer.pro  qml.qrc  style.css  trayimageprovider.cpp  trayimageprovider.h
src/Components/: Clock.qml  Colors.qml  DarkModeButton.qml  Dials.qml  ExternalDrop.qml  FaIcon.qml  Fonts.qml  Header.qml  Icon.qml  MacWindowControls.qml  MasterModel.qml  ModelBurner.qml  Notification.qml  NotificationSystem.qml  Pattern.qml  PiloramaTimer.qml  Preferences.qml  PreferencesButton.qml  PrefsButton.qml  ResetButton.qml  Sequence.qml  SoundButton.qml  SoundSettings.qml  StartScreen.qml  TimerControlButton.qml  TimerControls.qml  TimerModel.qml  TimerScreen.qml  TransparentScrollBar.qml  TrayIcon.qml  _Clock.qml  _Dials.qml  _MouseTracker.qml  _ResetButton.qml  _StartScreen.qml
src/Components/Pattern/: Header.qml  PatternItem.qml  PatternModel.qml
src/Components/Preferences/: BackButton.qml  Checkbox.qml  Header.qml  PillButton.qml  PreferenceItem.qml  StyledComboBox.qml
src/Components/Sequence/: ColorSelector.qml  Footer.qml  Header.qml  LoadButton.qml  PrefsButton.qml  SaveButton.qml  SequenceItem.qml  SequenceModel.qml  Tools.qml  Total.qml
src/Components/mac/: MacHeader.qml  MacWindowControls.qml
src/Pilorama/: pilorama.qmltypes  qmldir
src/Screens/Preferences/: Preferences.qml
src/Screens/Preferences/Components/: Checkbox.qml  Credits.qml  Header.qml  Setting.qml  ThemeChoice.qml  Title.qml
src/Screens/Timer/: Timer.qml
src/Screens/Timer/Components/: ExternalDrop.qml  Header.qml  MacWindowControls.qml  PiloramaTimer.qml  Sequence.qml  TimerModel.qml
src/Screens/Timer/Components/Sequence/: ColorSelector.qml  FileDialogue.qml  Header.qml  SequenceItem.qml  Toolbar.qml
src/Screens/Timer/Components/Timer/: BurnerModel.qml  Clock.qml  Dials.qml  MouseTracker.qml  ResetButton.qml  StartScreen.qml  TimerScreen.qml
src/assets/app_icons/: icon.icns
src/assets/img/: icon.icns  trayicon.icns
src/mac/: Entitlements.plist  Info.plist  MacOSController.cpp  MacOSController.h  bundle.sh  utility.mm
src/notifications/: notificationsystem.cpp  notificationsystem.h
src/utils/: geometry.mjs  sound.mjs
tests/: pilorama_review_macos_tests.mm  pilorama_review_tests.cpp
